# pharmaTRACK_PERFECT_new

./: .gitignore  SlideReader.tsx  bump_version.cjs  debug_blank.js  ersCODEDDownloadspharmaTRACK  fix_ai_and_web.cjs  fix_all_6.cjs  fix_all_versions.cjs  fix_build.sh  fix_course_link.cjs  fix_dark_mode.cjs  fix_darkmode.cjs  fix_devtools.cjs  fix_dynamic_version.cjs  fix_file.cjs  fix_final.sh  fix_final_bugs.cjs  fix_final_pipeline.sh  fix_final_pipeline_21.sh  fix_final_updater.cjs  fix_freeze.cjs  fix_home_update.cjs  fix_iframe.cjs  fix_linker.sh  fix_native_browser.cjs  fix_native_updater.cjs  fix_native_webview.js  fix_notes_loader.cjs  fix_notes_push.cjs  fix_pdf_and_web.cjs  fix_pdf_blob.cjs  fix_pdf_worker.cjs  fix_popout.cjs  fix_popout_shell.cjs  fix_print.cjs  fix_print_logo.cjs  fix_question_bank.cjs  fix_questionbank_ui.cjs  fix_quiz.cjs  fix_quiz_compile.cjs  (+27 more)
.github/workflows/: release.yml  tauri-build-ubuntu.yml  tauri-build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Layout.tsx
src/context/: AppContext.tsx
src/pages/: Analytics.tsx  CourseDetail.tsx  Courses.tsx  Dashboard.tsx  Highlights.tsx  LearningObjectives.tsx  Login.tsx  Notes.tsx  Onboarding.tsx  Planner.tsx  Profile.tsx  QuestionBank.tsx  Quiz.tsx  Settings.tsx  SlideReader.tsx  StudyMaterials.tsx  Timetable.tsx
src/types/: index.ts
src/utils/: storage.ts  supabase.ts  universalProcessor.ts  wordProcessor.ts
